Fixed <li> element's <p> not aligned properly, also added 4 new <li> elements to the <ul> unordered list, each <li> contains a <h3> and <p> elements.

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,7 @@ section.enlargedAligned h3 {
 }
 
 section.enlargedAligned p {
+  text-align: left;
   padding: 0;
 }
 
